--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                     <div class="project-two">
                         <h3>Portfolio</h3>
                         <p>A Dynamic and visually appealing personal portfolio website using HTML, CSS, Bootstrap and Javascript.</p>
-                        <p class="link"><a href="https://ramya9899.github.io/Bootstrap_Design/">Website Link</a>&nbsp;<i class="fa-solid fa-link"></i></p>
+                        <p class="link"><a href="https://ramya9899.github.io/Personal_Portfolio/">Website Link</a>&nbsp;<i class="fa-solid fa-link"></i></p>
                     </div>
                 </div>
             </div>
