--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <div class="personal-detail">
                     <div class="detail-heading">
                         <p>Name:</p>
-                        <p>Date of birth:</p>
+                        <p>DOB:</p>
                         <p>Address:</p><br/>
                         <p>Zip code:</p>
                         <p>Email:</p>
@@ -59,7 +59,7 @@
                     <div>
                         <p>Ramya D</p>
                         <p>August 9, 1999</p>
-                        <p>No:81, 4th street, Gopalapuram, Housing board, Tindivanam.</p>
+                        <p>No:81, 4th str, Gopalapuram, Housing board, Tindivanam.</p>
                         <p>604001</p>
                         <p>ramyamagesh9899@gmail.com</p>
                         <p>6381108428</p>
@@ -71,7 +71,7 @@
         <!----------------- Education Page Design ------------------------->
         <section class="education" id="education">
             <h1 class="heading edu">Education</h1><br/>
-            <div class="edu-box flex">
+            <div class="edu-box">
                 <div class="edu-box1">
                     <div class="flex box">
                         <div class="it" data-aos="fade-down-right">
@@ -93,7 +93,8 @@
                         <i class="fa-solid fa-play arrow"></i>
                     </div>
                 </div>
-                <i class="fa-solid fa-circle circle"></i>
+               
+                <div class="edu-box3"> <i class="fa-solid fa-circle circle"></i></div>
                 <div class="edu-box2">
                     <div></div>
                     <div class="flex box">
