--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <p>Name:</p>
                         <p>DOB:</p>
                         <p>Address:</p><br/>
-                        <p>Zip code:</p>
+                        <p>Pincode:</p>
                         <p>Email:</p>
                         <p>Phone:</p>
                     </div>
@@ -74,7 +74,7 @@
             <div class="edu-box">
                 <div class="edu-box1">
                     <div class="flex box">
-                        <div class="it" data-aos="fade-down-right">
+                        <div class="it" data-aos="flip-right">
                             <p class="year">Year 2020 - 2022</p>
                             <h3>MSc( Information Technology )</h3>
                             <p>Thiruvalluvar University,&nbsp; Villupuram.</p>
@@ -84,7 +84,7 @@
                     </div>
                     <div></div>
                     <div class="flex box">
-                        <div class="hsl" data-aos="fade-down-right">
+                        <div class="hsl" data-aos="flip-right">
                             <p class="year">Year 2016 - 2017</p>
                             <h3>Higher Secondary 12TH</h3>
                             <p>St. Philomena's girls Hr.sec School,&nbsp;Tindivanam.</p>
@@ -99,7 +99,7 @@
                     <div></div>
                     <div class="flex box">
                         <i class="fa-solid fa-play fa-flip-horizontal arrow"></i>
-                        <div class="bca" data-aos="fade-down-left">
+                        <div class="bca" data-aos="flip-left">
                             <p class="year">Year 2017 - 2020</p>
                             <h3>Bachelor of Computer Application</h3>
                             <p>Thiruvalluvar University,&nbsp;Villupuram.</p>
