--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <!-------------------- About Page Image ------------------------------>
             <div class="image1" ></div>
             <!------------------ Personal Details ---------------------->
-            <div class="about-content" data-aos="fade-down-left">
+            <div class="about-content" data-aos="fade-up">
                 <h1 class="heading">About Me</h1>
                 <div class="personal-detail">
                     <div class="detail-heading">
@@ -82,7 +82,7 @@
                         </div>
                         <i class="fa-solid fa-play arrow"></i>
                     </div>
-                    <div></div>
+                    <div class="empty"></div>
                     <div class="flex box">
                         <div class="hsl" data-aos="flip-right">
                             <p class="year">Year 2016 - 2017</p>
@@ -93,10 +93,9 @@
                         <i class="fa-solid fa-play arrow"></i>
                     </div>
                 </div>
-               
                 <div class="edu-box3"> <i class="fa-solid fa-circle circle"></i></div>
                 <div class="edu-box2">
-                    <div></div>
+                    <div class="empty"></div>
                     <div class="flex box">
                         <i class="fa-solid fa-play fa-flip-horizontal arrow"></i>
                         <div class="bca" data-aos="flip-left">
@@ -106,7 +105,7 @@
                             <p>Percentage : 80%</p>
                         </div>
                     </div>
-                    <div></div>
+                    <div class="empty"></div>
                 </div>
             </div>
         </section>
