--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                     <div class="icons">
                         <a href="https://github.com/ramya9899"><i class="fa-brands fa-github icons-1"></i></a>
                         <a href="https://www.linkedin.com/in/ramya-d-421285290/"><i class="fa-brands fa-linkedin icons-1"></i></a>
-                        <a href="mailto:email.com@gmail.com,ramyamagesh9899@gmail.com"><i class="fa-solid fa-envelope icons-1 "></i></a>
+                        <a href="mailto:ramyamagesh9899@gmail.com"><i class="fa-solid fa-envelope icons-1 "></i></a>
                     </div>
                 </div>
                 <!-- Profile -->
