--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                         <i class="fa-solid fa-play arrow"></i>
                     </div>
                 </div>
-                <div class="edu-box3"> <i class="fa-solid fa-circle circle"></i></div>
+                <div class="edu-box3"><i class="fa-solid fa-graduation-cap circle"></i></div>
                 <div class="edu-box2">
                     <div class="empty"></div>
                     <div class="flex box">
@@ -222,7 +222,7 @@
                 </div>
             </div>
             <!-- Copyright -->
-            <p class="copy">Copyright &copy; Ramya/Portfolio</p>
+            <p class="copy">Copyright &copy; Ramya/2023 Portfolio</p>
          </section>
         <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
