--- a/index.html
+++ b/index.html
@@ -210,6 +210,7 @@
                     <h5>Hello !</h5>
                     <h4>I'm <span class="contact-design">Ramya ,</span> </h4>
                     <h4 class="contact-design">Front End Developer</h4><br/>
+                    <h4>Get In Touch</h4>
                     <div class="icons">
                         <a href="https://github.com/ramya9899"><i class="fa-brands fa-github icons-1"></i></a>
                         <a href="https://www.linkedin.com/in/ramya-d-421285290/"><i class="fa-brands fa-linkedin icons-1"></i></a>
